--- a/website/index.html
+++ b/website/index.html
@@ -38,7 +38,7 @@
             </div>
             <div id="config">
                 <p><span class="config-label">auto task after:</span><input class="config" type="number"
-                        id="autoTaskInput" name="autoTaskInput" placeholder="-" value="5" onclick="this.select();"
+                        id="autoTaskInput" name="autoTaskInput" placeholder="-" value="5"
                         oninput="saveAutoTaskInterval()" />
                     <span>sec.</span></p>
                 <p><span class="config-label"># of digits:</span><input class="config" type="number" id="f1"
@@ -70,7 +70,7 @@
     <script>
         (function () {
             if (localStorage.getItem('autoTaskInterval')) {
-                if (0 < localStorage.getItem('autoTaskInterval')) {
+                if (0 <= localStorage.getItem('autoTaskInterval')) {
                     autoTaskInput.value = localStorage.getItem('autoTaskInterval') / 1000;
                 } else {
                     autoTaskInput.value = "";
