--- a/website/index.html
+++ b/website/index.html
@@ -21,20 +21,16 @@
             <p id="partial-solutions"></p>
         </div>
         <div id="nav" class="hidden">
-            <h2 onclick="toggleNav()">(O)ptions</h2>
+            <h2 onclick="toggleNav()">Options</h2>
             <div id="control">
-                <button id="newTask" title="Create a new task based on the config and reset the view."
-                    onclick="newTask()">(N)ew</button>
-                <button id="submit" title="Submit and validate the current result." onclick="saveTempSolution()">(<span
-                        style="font-size: x-small;">⏎</span>) Validate</button>
-                <button id="toggleFullScreen" title="Switch to full screen mode and back."
-                    onclick="toggleFullScreen()">(F)ullscreen</button>
-                <button id="toggleSolution" title="Show the solution and steps as a hint."
-                    onclick="toggleSolution()">(S)olution</button>
+                <button id="toggleSolution" title="Show the solution and steps as a hint.">How to use<br /><span
+                        style='font-size: x-small'>(Manual)</span></button>
                 <button id="voiceMode" title="Use voice recognition instead of keyboard input."
                     onclick="toggleVoiceMode()"></button>
-                <button id="impress" title="Print legal information and credits." onclick="">(L)egal Notice<br /><span
+                <button id="impress" title="Print legal information and credits.">Legal Notice<br /><span
                         style='font-size: x-small'>(Impressum)</span></button>
+                <button id="impress" title="Get information about how to contact." onclick="window.open('https://paypal.me/pools/c/8pfcrOnyif')">Feedback, Bugs<br />&
+                    Support..</button>
             </div>
             <div id="config">
                 <p><span class="config-label">auto task after:</span><input class="config" type="number"
