--- a/website/index.html
+++ b/website/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mula - Agile Math Trainer :)</title>
+    <title>Dorie - Agile Math Trainer :)</title>
     <link rel="shortcut icon" type="image/png" href="settings.png" />
     <link rel="stylesheet" type="text/css" href="default.css" media="screen" />
 </head>
@@ -12,8 +12,8 @@
 <body>
     <div id="wrapper">
         <header id="header" onclick="toggleNav()">
-            <h1>Mula <img id="settings-image" src="settings.png" /></h1>
-            <p>Agile Math Trainer</p>
+            <h1>D<img id="settings-image" src="settings.png" />rie</h1>
+            <p>Agile Math Training</p>
         </header>
         <div id="Solution" style="display: none;" onclick="toggleSolution()">
             <h2>Solutions</h2>
