--- a/website/index.html
+++ b/website/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dorie - Agile Math Trainer :)</title>
+    <title>Dorie Agile Math</title>
     <link rel="shortcut icon" type="image/png" href="settings.png" />
     <link rel="stylesheet" type="text/css" href="default.css" media="screen" />
 </head>
@@ -25,33 +25,20 @@
             <div id="control">
                 <button id="toggleSolution" title="Show the solution and steps as a hint.">How to use<br /><span
                         class="button-sub">(Manual)</span></button>
-                <button id="voiceMode" title="Use voice recognition instead of keyboard input."
-                    onclick="enterFullscreen();toggleVoiceMode()"><span class="hidden" id="voice-button-on">Voice is
-                        ON</span><span id="voice-button-off">Voice is OFF</span><br /><span
+                <button id="voiceMode" title="Use voice recognition instead of keyboard input." onclick="enterFullscreen();toggleVoiceMode()">Voice is <span class="hidden b-label-status" id="voice-button-on">ON</span><span id="voice-button-off" class="b-label-status">OFF</span><br /><span
                         class="button-sub">(beta)</span></button>
-                <button id="soundMode" title="Use audio output for tasks and status feedback."
-                    onclick="toggleSoundMode();"><span class="hidden" id="sound-button-on">Sound is ON</span><span
-                        id="sound-button-off">Sound is OFF</span><br /><span class="button-sub">(beta)</span></button>
+                <button id="soundMode" title="Use audio output for tasks and status feedback." onclick="toggleSoundMode();">Sound is  <span class="hidden b-label-status" id="sound-button-on">ON</span><span id="sound-button-off" class="b-label-status">OFF</span><br /><span class="button-sub">(beta)</span></button>
                 <button id="impress" title="Print legal information and credits.">Legal Notice<br /><span
-                        class="button-sub">(Impressum)</span></button>
-                <button id="impress" title="Get information about how to contact."
-                    onclick="window.open('https://paypal.me/pools/c/8pfcrOnyif')">Feedback, Bugs<br />&
-                    Support..</button>
+                        class="button-sub">(Imprint)</span></button>
+                <button id="impress" title="Get information about how to contact." onclick="window.open('https://paypal.me/pools/c/8pfcrOnyif')">Feedback, Bugs<br />& Support..</button>
             </div>
             <div id="config">
-                <p><span class="config-label">auto task after:</span><input class="config" type="number"
-                        id="autoTaskInput" name="autoTaskInput" placeholder="-" value="5"
-                        oninput="saveAutoTaskInterval()" />
+                <p><span class="config-label">auto task after:</span><input class="config" type="number" id="autoTaskInput" name="autoTaskInput" placeholder="-" value="5" oninput="saveAutoTaskInterval()" />
                     <span>sec.</span></p>
-                <p><span class="config-label"># of digits:</span><input class="config" type="number" id="f1"
-                        name="factor1" placeholder="1" value="1"
-                        onblur="if(this.value==''){this.value=this.placeholder}"
-                        onclick="if(this.value != ''){this.placeholder=this.value;this.value=''};config.scrollIntoView(true);"
+                <p><span class="config-label"># of digits:</span><input class="config" type="number" id="f1" name="factor1" placeholder="1" value="1" onblur="if(this.value==''){this.value=this.placeholder}" onclick="if(this.value != ''){this.placeholder=this.value;this.value=''};config.scrollIntoView(true);"
                         oninput="newTask(false)" />
-                    <input class="config" type="number" id="f2" name="factor2" placeholder="2" value="2"
-                        onblur="if(this.value==''){this.value=this.placeholder}"
-                        onclick="if(this.value != ''){this.placeholder=this.value;this.value=''};config.scrollIntoView(true);"
-                        oninput="newTask(false)" /></p>
+                    <input class="config" type="number" id="f2" name="factor2" placeholder="2" value="2" onblur="if(this.value==''){this.value=this.placeholder}" onclick="if(this.value != ''){this.placeholder=this.value;this.value=''};config.scrollIntoView(true);" oninput="newTask(false)"
+                    /></p>
             </div>
         </div>
         <div id="trainer-page">
@@ -60,8 +47,7 @@
             </section>
             <section id="input" class="speech">
                 <img id="mic-image" class="hidden" src="32px-Font_Awesome_5_solid_microphone-alt.svg.png" />
-                <input type="number" id="solution" name="solution" placeholder="=" onkeyup="guessInput()"
-                    onselect="return false;" onfocus="return false;" />
+                <input type="number" id="solution" name="solution" placeholder="=" onkeyup="guessInput()" onselect="return false;" onfocus="return false;" />
             </section>
             <section>
                 <p id="temp-solutions" onclick="toggleSolution()"></p>
@@ -71,7 +57,7 @@
     </div>
     <script src="default.js"></script>
     <script>
-        (function () {
+        (function() {
             if (localStorage.getItem('autoTaskInterval')) {
                 if (0 <= localStorage.getItem('autoTaskInterval')) {
                     autoTaskInput.value = localStorage.getItem('autoTaskInterval') / 1000;
