split js in functions and loading

--- a/website/index.html
+++ b/website/index.html
@@ -7,6 +7,10 @@
     <title>Dorie Agile Math</title>
     <link rel="shortcut icon" type="image/png" href="img/settings.png" />
     <link rel="stylesheet" type="text/css" href="styles/default.css" media="screen" />
+    <script src="js/debug.js"></script>
+    <script src="js/default.js"></script>
+    <script src="js/voice.js"></script>
+    <script src="js/sound.js"></script>
 </head>
 
 <body>
@@ -56,10 +60,10 @@
 
         </div>
     </div>
-    <script src="js/debug.js"></script>
-    <script src="js/default.js"></script>
-    <script src="js/voice.js"></script>
-    <script src="js/sound.js"></script>
+    <script src="js/default_events.js"></script>
+    <script src="js/debug_events.js"></script>
+    <script src="js/voice_events.js"></script>
+    <script src="js/sound_events.js"></script>
     <script>
         (function() {
             if (localStorage.getItem('autoTaskInterval')) {
