--- a/website/index.html
+++ b/website/index.html
@@ -11,6 +11,7 @@
     <script src="js/default.js"></script>
     <script src="js/voice.js"></script>
     <script src="js/sound.js"></script>
+    <script src="js/math.js"></script>
 </head>
 
 <body>
@@ -32,6 +33,10 @@
                 <button id="voiceMode" title="Use voice recognition instead of keyboard input." onclick="enterFullscreen();toggleVoiceMode()">Voice is <span class="hidden b-label-status" id="voice-button-on">ON</span><span id="voice-button-off" class="b-label-status">OFF</span><br /><span
                         class="button-sub">(beta)</span></button>
                 <button id="soundMode" title="Use audio output for tasks and status feedback." onclick="toggleSoundMode();">Sound is  <span class="hidden b-label-status" id="sound-button-on">ON</span><span id="sound-button-off" class="b-label-status">OFF</span><br /><span class="button-sub">(beta)</span></button>
+                <button id="button-decimalPlaces" title="Allow randomly decimal places in the task." class="hidden">Decimal Places <span
+                    class="hidden b-label-status" id="decimalPlaces-button-on">ON</span><span
+                    id="decimalPlaces-button-off" class="b-label-status">OFF</span><br /><span
+                    class="button-sub">(random)</span></button>
                 <button id="impress" title="Print legal information and credits.">Legal Notice<br /><span
                         class="button-sub">(Imprint)</span></button>
                 <button id="impress" title="Get information about how to contact." onclick="window.open('https://paypal.me/pools/c/8pfcrOnyif')">Feedback, Bugs<br />& Support..</button>
@@ -64,26 +69,7 @@
     <script src="js/debug_events.js"></script>
     <script src="js/voice_events.js"></script>
     <script src="js/sound_events.js"></script>
-    <script>
-        (function() {
-            if (localStorage.getItem('autoTaskInterval')) {
-                if (0 <= localStorage.getItem('autoTaskInterval')) {
-                    autoTaskInput.value = localStorage.getItem('autoTaskInterval') / 1000;
-                } else {
-                    autoTaskInput.value = "";
-                }
-            }
-
-            if (localStorage.getItem('f1')) {
-                f1input.value = localStorage.getItem('f1');
-            }
-            if (localStorage.getItem('f2')) {
-                f2input.value = localStorage.getItem('f2');
-            }
-            newTask();
-            currentSolution.focus();
-        })();
-    </script>
+    <script src="js/math_event.js"></script>
 </body>
 
 </html>
