fix fractions bug + add  unit tests

--- a/website/index.html
+++ b/website/index.html
@@ -11,7 +11,7 @@
     <script src="js/default.js"></script>
     <script src="js/voice.js"></script>
     <script src="js/sound.js"></script>
-    <script src="js/math.js"></script>
+    <script src="js/math/math.js"></script>
 </head>
 
 <body>
@@ -69,7 +69,7 @@
     <script src="js/debug_events.js"></script>
     <script src="js/voice_events.js"></script>
     <script src="js/sound_events.js"></script>
-    <script src="js/math_event.js"></script>
+    <script src="js/math/math_event.js"></script>
 </body>
 
 </html>
