--- a/website/index.html
+++ b/website/index.html
@@ -33,7 +33,7 @@
                 <button id="voiceMode" title="Use voice recognition instead of keyboard input." onclick="enterFullscreen();toggleVoiceMode()">Voice is <span class="hidden b-label-status" id="voice-button-on">ON</span><span id="voice-button-off" class="b-label-status">OFF</span><br /><span
                         class="button-sub">(beta)</span></button>
                 <button id="soundMode" title="Use audio output for tasks and status feedback." onclick="toggleSoundMode();">Sound is  <span class="hidden b-label-status" id="sound-button-on">ON</span><span id="sound-button-off" class="b-label-status">OFF</span><br /><span class="button-sub">(beta)</span></button>
-                <button id="button-decimalPlaces" title="Allow randomly decimal places in the task." class="hidden">Decimal Places <span
+                <button id="button-decimalPlaces" title="Allow randomly decimal places in the task.">Decimal Places <span
                     class="hidden b-label-status" id="decimalPlaces-button-on">ON</span><span
                     id="decimalPlaces-button-off" class="b-label-status">OFF</span><br /><span
                     class="button-sub">(random)</span></button>
