--- a/website/index.html
+++ b/website/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dorie Agile Math</title>
     <link rel="shortcut icon" type="image/png" href="img/settings.png" />
-    <link rel="stylesheet" type="text/css" href="styles/default.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="styles/desktop.css" media='screen and (min-width: 700px)' />
+    <link rel="stylesheet" type="text/css" href="styles/mobile.css" media="screen and (max-width: 699px)" />
+    <link rel="stylesheet" type="text/css" href="styles/tablet.css" media="screen and (min-width: 700px) and (max-width: 1099px)" />
+    <link rel="stylesheet" type="text/css" href="styles/desktop.css" media='screen and (min-width: 1100px)' />
     <script src="js/debug.js"></script>
     <script src="js/default.js"></script>
     <script src="js/voice.js"></script>
