--- a/website/index.html
+++ b/website/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" type="text/css" href="styles/mobile.css" media="screen and (max-width: 699px)" />
     <link rel="stylesheet" type="text/css" href="styles/tablet.css" media="screen and (min-width: 700px) and (max-width: 1099px)" />
     <link rel="stylesheet" type="text/css" href="styles/desktop.css" media='screen and (min-width: 1100px)' />
+    <link rel="stylesheet" type="text/css" href="styles/global.css" />
+    <link rel="stylesheet" type="text/css" href="styles/themes/dark.css" />
     <script src="js/debug.js"></script>
     <script src="js/default.js"></script>
     <script src="js/voice.js"></script>
