reorder navigation + rename voice and sound

--- a/website/index.html
+++ b/website/index.html
@@ -46,11 +46,12 @@
             <div id="nav" class="hidden">
                 <h2 onclick="toggleNav()">Options</h2>
                 <div id="control">
-                    <button id="toggleSolution" title="Show the solution and steps as a hint.">How to use<br /><span
+                    <button id="button-debug" title="Switch between debug mode and default." class="hidden debugging">Debugging is  <span class="hidden b-label-status" id="debug-button-on">ON</span><span id="debug-button-off" class="b-label-status">OFF</span><br/><span></span></button>
+                    <button id="howToUse" title="Get an introduction about the navigation and features.">How to use<br /><span
                         class="button-sub">(Manual)</span></button>
-                    <button id="voiceMode" title="Use voice recognition instead of keyboard input." onclick="enterFullscreen();toggleVoiceMode()">Voice is <span class="hidden b-label-status" id="voice-button-on">ON</span><span id="voice-button-off" class="b-label-status">OFF</span><br /><span
+                    <button id="voiceMode" title="Use voice recognition instead of keyboard input." onclick="enterFullscreen();toggleVoiceMode()">Dorie listens<span class="hidden b-label-status" id="voice-button-on">ON</span><span id="voice-button-off" class="b-label-status">OFF</span><br /><span
                             class="button-sub">(beta)</span></button>
-                    <button id="soundMode" title="Use audio output for tasks and status feedback." onclick="toggleSoundMode();">Sound is  <span class="hidden b-label-status" id="sound-button-on">ON</span><span id="sound-button-off" class="b-label-status">OFF</span><br /><span class="button-sub">(beta)</span></button>
+                    <button id="soundMode" title="Use audio output for tasks and status feedback." onclick="toggleSoundMode();">Dorie speaks<span class="hidden b-label-status" id="sound-button-on">ON</span><span id="sound-button-off" class="b-label-status">OFF</span><br /><span class="button-sub">(beta)</span></button>
                     <button id="button-decimalPlaces" title="Allow randomly decimal places in the task.">Decimal Places <span
                                 class="hidden b-label-status" id="decimalPlaces-button-on">ON</span><span
                                 id="decimalPlaces-button-off" class="b-label-status">OFF</span><br /><span
@@ -58,7 +59,6 @@
                     <button id="impress" title="Print legal information and credits.">Legal Notice<br /><span
                                     class="button-sub">(Imprint)</span></button>
                     <button id="impress" title="Get information about how to contact." onclick="window.open('https://paypal.me/pools/c/8pfcrOnyif')">Feedback, Bugs<br />& Support..</button>
-                    <button id="button-debug" title="Switch between debug mode and default." class="hidden debugging">Debugging is  <span class="hidden b-label-status" id="debug-button-on">ON</span><span id="debug-button-off" class="b-label-status">OFF</span><br/><span></span></button>
                     <div id="config">
                         <p><span class="config-label">auto task after:</span><input class="config" type="number" id="autoTaskInput" name="autoTaskInput" placeholder="-" value="5" oninput="saveAutoTaskInterval()" />
                             <span>sec.</span></p>
