add history data to statistics

--- a/website/index.html
+++ b/website/index.html
@@ -17,6 +17,7 @@
     <script src="js/sound/sound.js"></script>
     <script src="js/math/math.js"></script>
     <script src="js/page/page.js"></script>
+    <script src="js/statistics/statistics.js"></script>
     <!-- production -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/vue"></script> -->
     <!-- development -->
@@ -72,10 +73,10 @@
             <div id="stats" class="hidden page">
                 <h2>Statistics</h2>
                 <div class="subpage" id="history">
-                    <p>Your last results:</p>
-                    <ul id="history-list">
+                    <h3>Your last results:</h3>
+                    <ol reversed id="history-list">
 
-                    </ul>
+                    </ol>
                 </div>
             </div>
             <div id="trainer-page">
@@ -99,6 +100,7 @@
     <script src="js/voice/voice_events.js"></script>
     <script src="js/sound/sound_events.js"></script>
     <script src="js/math/math_event.js"></script>
+    <script src="js/statistics/statistics_event.js"></script>
 </body>
 
 </html>
