--- a/website/index.html
+++ b/website/index.html
@@ -46,29 +46,42 @@
             </div>
             <div id="nav" class="hidden page">
                 <h2>Options</h2>
-                <div id="control" class="subpage">
-                    <button id="button-logging" title="Switch between debug mode and default." class="hidden debugging">Logging is  <span class="hidden b-label-status" id="logging-button-on">ON</span><span id="logging-button-off" class="b-label-status">OFF</span><br/><span></span></button>
-                    <button id="howToUse" title="Get an introduction about the navigation and features.">How to use<br /><span
+                <ul id="control" class="subpage">
+                    <li><button class="option-item" id="button-logging" title="Switch between debug mode and default." class="hidden debugging">Logging is  <span class="hidden b-label-status" id="logging-button-on">ON</span><span id="logging-button-off" class="b-label-status">OFF</span><br/><span></span></button>
+                    </li>
+                    <li><button class="option-item" id="howToUse" title="Get an introduction about the navigation and features.">How to use<br /><span
                         class="button-sub">(Manual)</span></button>
-                    <button id="voiceMode" title="Use voice recognition instead of keyboard input." onclick="enterFullscreen();toggleVoiceMode()">Dorie listens<span class="hidden b-label-status" id="voice-button-on">ON</span><span id="voice-button-off" class="b-label-status">OFF</span><br /><span
+                    </li>
+                    <li><button class="option-item" id="voiceMode" title="Use voice recognition instead of keyboard input." onclick="enterFullscreen();toggleVoiceMode()">Dorie listens<span class="hidden b-label-status" id="voice-button-on">ON</span><span id="voice-button-off" class="b-label-status">OFF</span><br /><span
                             class="button-sub">(beta)</span></button>
-                    <button id="soundMode" title="Use audio output for tasks and status feedback." onclick="toggleSoundMode();">Dorie speaks<span class="hidden b-label-status" id="sound-button-on">ON</span><span id="sound-button-off" class="b-label-status">OFF</span><br /><span class="button-sub">(beta)</span></button>
-                    <button id="button-decimalPlaces" title="Allow randomly decimal places in the task.">Decimal Places <span
+                    </li>
+                    <li><button class="option-item" id="soundMode" title="Use audio output for tasks and status feedback." onclick="toggleSoundMode();">Dorie speaks<span class="hidden b-label-status" id="sound-button-on">ON</span><span id="sound-button-off" class="b-label-status">OFF</span><br /><span class="button-sub">(beta)</span></button>
+                    </li>
+                    <li><button class="option-item" id="button-decimalPlaces" title="Allow randomly decimal places in the task.">Decimal Places <span
                                 class="hidden b-label-status" id="decimalPlaces-button-on">ON</span><span
                                 id="decimalPlaces-button-off" class="b-label-status">OFF</span><br /><span
                                 class="button-sub">(random)</span></button>
-                    <button id="impress" title="Print legal information and credits.">Legal Notice<br /><span
+                    </li>
+                    <li>
+                        <button class="option-item">
+                            <span class="config-label">New Task After:</span><span class="b-label-status"><input class="config" type="number" id="autoTaskInput" name="autoTaskInput" placeholder="-" value="5" oninput="saveAutoTaskInterval()" /></span><br /><span
+                            class="button-sub">(time to wait in sec.)</span></button>
+                        </button>
+                    </li>
+                    <li>
+                        <button class="option-item">
+                            <span class="config-label">Number Sizes:</span><span class="b-label-status"><input class="config" type="number" id="f1" name="factor1" placeholder="1" value="1" onblur="if(this.value==''){this.value=this.placeholder}" onclick="if(this.value != ''){this.placeholder=this.value;this.value=''};"
+                            oninput="newTask(false)" />⋅<input class="config" type="number" id="f2" name="factor2" placeholder="1" value="1" onblur="if(this.value==''){this.value=this.placeholder}" onclick="if(this.value != ''){this.placeholder=this.value;this.value=''};"
+                            oninput="newTask(false)" /></span><br /><span
+                            class="button-sub">(2⋅3=xx⋅yyy)</span>
+                        </button>
+                    </li>
+                    <li><button class="option-item" id="impress" title="Print legal information and credits.">Legal Notice<br /><span
                                     class="button-sub">(Imprint)</span></button>
-                    <button id="impress" title="Get information about how to contact." onclick="window.open('https://paypal.me/pools/c/8pfcrOnyif')">Feedback, Bugs<br />& Support..</button>
-                    <div id="config">
-                        <p><span class="config-label">auto task after:</span><input class="config" type="number" id="autoTaskInput" name="autoTaskInput" placeholder="-" value="5" oninput="saveAutoTaskInterval()" />
-                            <span>sec.</span></p>
-                        <p><span class="config-label"># of digits:</span><input class="config" type="number" id="f1" name="factor1" placeholder="1" value="1" onblur="if(this.value==''){this.value=this.placeholder}" onclick="if(this.value != ''){this.placeholder=this.value;this.value=''};config.scrollIntoView(true);"
-                                oninput="newTask(false)" />
-                            <input class="config" type="number" id="f2" name="factor2" placeholder="1" value="1" onblur="if(this.value==''){this.value=this.placeholder}" onclick="if(this.value != ''){this.placeholder=this.value;this.value=''};config.scrollIntoView(true);" oninput="newTask(false)"
-                            /></p>
-                    </div>
-                </div>
+                    </li>
+                    <li><button class="option-item" id="impress" title="Get information about how to contact." onclick="window.open('https://paypal.me/pools/c/8pfcrOnyif')">Feedback, Bugs<br />& Support..</button>
+                    </li>
+                </ul>
             </div>
             <div id="stats" class="hidden page">
                 <h2>Statistics</h2>
